[package]
name = "vau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siena = "2.0.1"
tera = "1.19.1"
notify = "6.1.1"
notify-debouncer-mini = { version = "*", default-features = false }
log = "0.4.20"
