[package]
name = "vau"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
siena = "3.2.0"
tera = "1.19.1"
notify = "6.1.1"
notify-debouncer-mini = { version = "*", default-features = false }
log = "0.4.20"
toml = "0.8.2"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0"
regex = "1.10.1"
